syntax = "proto3";

package request;

message PacketToInject {
  enum Direction {
    kClientToServer = 0;
    kServerToClient = 1;
  }
  Direction direction = 1;
  uint32 opcode = 2;
  bytes data = 3;
}

message RequestMessage {
  oneof body {
    PacketToInject packetData = 1;
  }
}